--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,11 @@ body {
 
 :root {
   --gap: 30px;
-
+  --color-text: #121723;
+  --color-text-light: #A1A6B4;
+  --color-text-white: #FFFFFF;
+  --color-text-accent:#F0D288;
+  --color-text-btn: #AA9DFA;
 }
 
 .list-reset {
@@ -85,7 +89,7 @@ body {
   font-size: 48px;
   font-weight: 400;
   line-height: 48px;
-  color: #121723;
+  color: var(--color-text);
 }
 
 .hero__text {
@@ -95,7 +99,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #121723;
+  color: var(--color-text);
 }
 
 
@@ -149,7 +153,7 @@ font-family: "Muller", sans-serif;
 font-size: 60px;
 font-weight: 700;
 line-height: 60px;
-color: #121723;
+color: var(--color-text);
 }
 
 .hero__heading {
@@ -158,7 +162,7 @@ color: #121723;
   font-weight: 400;
   line-height: 60px;
   font-style: italic;
-  color: #121723;
+  color: var(--color-text);
 }
 
 .hero__text {
@@ -216,7 +220,7 @@ font-family: "Muller";
 font-size: 10px;
 font-weight: 400;
 line-height: 10px;
-color: #121723;
+color: var(--color-text);
 background-color: #E6E8EC;
 }
 
@@ -229,7 +233,7 @@ padding: 40px 30px;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
-  color: #121723;
+  color: var(--color-text);
 }
 
 .podcast__subtitle {
@@ -249,7 +253,7 @@ font-family: "Muller";
 font-size: 16px;
 font-weight: 400;
 line-height: 16px;
-color: #A1A6B4;
+color: var(--color-text-light);
 }
 
 
@@ -260,24 +264,41 @@ color: #A1A6B4;
   padding: 6.5% 21.09% 5.5%;
 }
 
-.broadcast__title {
+.broadcast__left {
+  flex-direction: column;
+  margin-right: 30px;
+  }
 
+.broadcast__title {
+flex-grow: 1;
 }
 
-.broadcast__left {
-
+.broadcast__pic {
+ margin-bottom: 24px;
+ width: 65px;
 }
 
 .broadcast__btn {
-
+  margin-bottom: 12px;
+  padding: 12px 56px;
+  width: 160px;
+  height: 40px;
+  border-radius: 77px;
+  border: 2px solid #121723;
+  background: none;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  color: var(--color-text);
 }
 
 .broadcast__descr {
+  margin: 0;
   font-family: "Muller";
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
-  color: #A1A6B4;
+  color: var(--color-text-light);
 }
 
 .broadcast__right {
@@ -285,8 +306,9 @@ color: #A1A6B4;
 }
 
 .broadcast__list {
- flex-wrap: wrap;
- gap:var(--gap);
+  flex-wrap: wrap;
+  gap:var(--gap);
+  width: 825px;
 }
 
 .broadcast__item {
@@ -310,7 +332,7 @@ border: 1px solid #E6E8EC;
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
-  color: #121723;
+  color: var(--color-text);
 }
 
 .broadcast__text {
@@ -320,7 +342,7 @@ border: 1px solid #E6E8EC;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
-  color: #A1A6B4;
+  color: var(--color-text-light);
 }
 
 .broadcast__box {
@@ -332,26 +354,44 @@ border: 1px solid #E6E8EC;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
-  color: #121723;
+  color: var(--color-text);
 }
 
 
 /* guest */
 
-.guest__title {
+.guest__container {
+  padding: 4.9% 21.09%;
+  background-color: #121723;
+}
 
+.guest__title {
+color: var(--color-text-white);
 }
 
 .guest__heading {
-
+  margin: 0;
+  margin-bottom: 8px;
+  font-family: "Muller";
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  color: var(--color-text-light);
 }
 
 .guest__text {
-
+  margin: 0;
+  margin-bottom: 50px;
+  font-family: "Muller";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  color: var(--color-text-light);
 }
 
 .guest__list {
-
+flex-direction: column;
+gap: 50px;
 }
 
 .guest__item {
@@ -359,30 +399,57 @@ border: 1px solid #E6E8EC;
 }
 
 .guest__img {
+margin-right: 30px;
+}
 
+.guest__content {
+flex-direction: column;
 }
 
 .guest__subtitle {
-
+  margin: 0;
+  margin-bottom: 8px;
+  font-family: "Muller";
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--color-text-white);
 }
 
 .guest__descr {
-
+margin: 0;
+margin-bottom: 8px;
+flex-grow: 1;
+font-family: "Muller";
+font-size: 16px;
+font-weight: 400;
+line-height: 28px;
+color: var(--color-text-light);
 }
 
 .guest__btn {
-
+  padding: 12px 16px;
+  width: 160px;
+  height: 40px;
+  border-radius: 77px;
+  border: 2px solid #AA9DFA;
+  background: none;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  color: var(--color-text-btn);
 }
 
 
 /* playlist */
 
 .playlist__container {
-
+  padding: 4.9% 21.09%;
 }
 
 .playlist__left {
-
+margin-right: 30px;
+/* width: 350px; */
 }
 
 .playlist__title {
@@ -390,19 +457,38 @@ border: 1px solid #E6E8EC;
 }
 
 .playlist__text {
-
+  margin: 0;
+  margin-bottom: 5px;
+  font-family: "Muller";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: var(--color-text-light);
 }
 
 .playlist__copy {
+  margin: 0;
+  margin-bottom: 6px;
+  font-family: "Muller";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 22px;
+  color: var(--color-text-light);
+}
+
+.playlist__right {
 
 }
 
 .playlist__list {
-
+flex-wrap: wrap;
+gap:var(--gap);
 }
 
 .playlist__item {
-
+position: relative;
+width: 160px;
+font-size: 0;
 }
 
 .playlist__img {
@@ -410,58 +496,111 @@ border: 1px solid #E6E8EC;
 }
 
 .playlist__svg {
-
+position: absolute;
+left: 136px;
 }
 
 .playlist__box {
-
+padding: 16px;
+border: 1px solid #E6E8EC;
 }
 
 .playlist__subtitle {
-
+  margin: 0;
+  margin-bottom: 5px;
+  font-family: "Muller";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  color: var(--color-text);
 }
 
 .playlist__descr {
-
+  margin: 0;
+  font-family: "Muller";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+  color: var(--color-text-light);
 }
 
 
 /* radio */
 
-.radio__left {
+.radio__container {
+  padding: 4.9% 21.09%;
+  background-color: #292E39;
+}
 
+.radio__left {
+  position: relative;
+  margin-right: 30px;
 }
 
 .radio__img {
 
 }
 
-.radio__svg {
-
+.radio__svg-new {
+position: absolute;
+right: 330px;
 }
 
 .radio__right {
-
+flex-direction: column;
+width: 445px;
 }
 
 .radio__title {
-
+  margin-bottom: 20px;
+  font-family: "Muller";
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 48px;
+  color: var(--color-text-accent);
 }
 
 .radio__svg-wave {
-
+  margin-bottom: 20px;
 }
 
 .radio__text {
-
+  margin: 0;
+  margin-bottom: 12px;
+  font-family: "Muller";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  color: var(--color-text-white);
 }
 
 .radio__price {
-
+  margin: 0;
+  margin-bottom: 30px;
+  font-family: "Muller";
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 30px;
+  color: var(--color-text-white);
 }
 
 .radio__btn {
 
+  padding: 25px 20px 25px 8px;
+  width: 300px;
+  height: 70px;
+  border-radius: 100px;
+  border: 2px solid #F0D288;
+  background: none;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--color-text-accent);
+}
+
+.radio__svg-btn {
+
+padding-right: 8px;
 }
 
 
