--- a/css/style.css
+++ b/css/style.css
@@ -650,27 +650,41 @@ margin-right: 30px;
 }
 
 .about__list  {
-
+gap: var(--gap);
+margin-bottom: 30px;
 }
 
 .about__item {
-
+font-size: 0;
 }
 
 .about__img {
-
+  margin-bottom: 30px;
+width: 255px;
+height: 255px;
 }
 
 .about__subtitle {
-
+  margin: 0;
+  margin-bottom: 8px;
+  font-family: "Muller";
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--color-text-white);
 }
 
 .about__descr {
-
+  margin: 0;
+  font-family: "Muller";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-text-light);
 }
 
 .form-wrapper {
-
+width: 920px;
 }
 
 .form {
@@ -678,37 +692,116 @@ margin-right: 30px;
 }
 
 .form-textarea {
-
+  margin-bottom: 30px;
+  padding: 30px 32px 100px;
+  width: 920px;
+  height: 150px;
+  border: 1p solid #FFFFFF;
+  border-radius: 30px;
+  background: none;
 }
 
 .form-box {
-
+gap: var(--gap);
 }
 
 .form-input {
-
+  margin-bottom: 30px;
+  padding: 25px 25px 25px 32px;
+  width: 445px;
+  height: 70px;
+  border: 1px solid #FFFFFF;
+  border-radius: 30px;
+  background: none;
 }
 
 .form-btn {
-
+  margin-bottom: 30px;
+  padding: 25px 54px;
+  width: 212px;
+  height: 70px;
+  border-radius: 40px;
+  border: none;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 .form-check {
+  position: relative;
+  user-select: none;
+  cursor: pointer;
+}
 
+.form-checkbox-custom {
+  position: absolute;
+  align-self: center;
+  appearance: none;
+  border: 1px solid #FFFFFF;
+  width: 14px;
+  height: 14px;
+  cursor: pointer;
 }
 
 .form-text {
-
+  position: relative;
+  margin: 0;
+  padding-left: 20px;
+  padding-top: 4px;
+  font-family: "Muller";
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 12px;
+  color: var(--color-text-white);
 }
 
+.form-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 14px;
+  height: 14px;
+  transform: translateY(-50%);
+}
+
+.form-text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 14px;
+  height: 14px;
+  background-image: url("/img/check.svg");
+  background-position: center;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 0.3s;
+  transform: translateY(-50%);
+}
+
+.form-checkbox-custom:checked + .form-text::after {
+  opacity: 1;
+}
 
 /* footer */
+
+.footer__container {
+  padding: 4.9% 21%;
+  background-color:#292E39;
+  justify-content: space-between;
+}
 
 .footer__left {
 
 }
 
 .footer__logo {
+  margin-bottom: 30px;
+}
+
+.footer__link {
 
 }
 
@@ -717,7 +810,11 @@ margin-right: 30px;
 }
 
 .social__item {
+  margin-right: 20px;
+}
 
+.social__item:last-child {
+  margin-right: 0;
 }
 
 .social-link {
@@ -733,21 +830,37 @@ margin-right: 30px;
 }
 
 .footer__list {
-
+  flex-direction: column;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  column-gap: 110px;
+  height: 98px;
+  width: 445px;
 }
 
 .nav__item {
+  margin: 0;
 
 }
 
 .nav__link {
-
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  color: var(--color-text-white);
 }
 
 .footer__box {
-
+  padding-bottom: 10px;
+  background-color:#292E39;
 }
 
 .footer__text {
-
+text-align: center;
+margin: 0;
+font-size: 16px;
+font-weight: 400;
+line-height: 16px;
+color: var(--color-text-white);
 }
