--- a/css/style.css
+++ b/css/style.css
@@ -410,24 +410,14 @@ border: 1px solid #E6E8EC;
 }
 
 .broadcast__box {
-  align-items: center;
+
 }
 
-.broadcast__box:focus {
-  background-color: none;
-  }
 
-  .broadcast__box:hover {
-
-  }
-
-  .broadcast__box:active {
-  padding: 3px;
-  background-color: #AA9DFA;
-  transition: background-color 0.3s ease-in-out;
-  }
 
 .broadcast__link {
+  display: flex;
+  align-items: center;
   font-family: "Muller";
   font-size: 16px;
   font-weight: 400;
@@ -448,7 +438,7 @@ border: 1px solid #E6E8EC;
   }
 
   .broadcast__link:active {
-  padding: 3px;
+  /* padding: 3px; */
   background-color: #AA9DFA;
   color: var(--color-text-white);
   fill: var(--color-text-white);
@@ -470,15 +460,37 @@ border: 1px solid #E6E8EC;
     .broadcast__svg:hover {
     color: #6D31EE;
     fill: #6D31EE;
+    background-color: #6D31EE;
     }
 
     .broadcast__svg:active {
-    padding: 3px;
-    background-color: #AA9DFA;
     color: var(--color-text-white);
     fill: var(--color-text-white);
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
     }
+
+    .broadcast__wrapper {
+      padding: 3px;
+      cursor: pointer;
+    }
+
+    .broadcast__wrapper:focus {
+      background-color: none;
+      color: #4F28A5;
+      fill: #4F28A5;
+      }
+
+      .broadcast__wrapper:hover {
+        color: #6D31EE;
+        fill: #6D31EE;
+      }
+
+      .broadcast__wrapper:active {
+      background-color: #AA9DFA;
+      color: var(--color-text-white);
+      fill: var(--color-text-white);
+      transition: background-color 0.3s ease-in-out;
+      }
 
 
 /* guest */
