--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,11 @@ margin-right: 208px;
 }
 
 .nav__item {
-  margin-right: 58px;
+
 }
 
-.nav__item:last-child {
-  margin-right: 0;
+.nav__item:not(:last-child) {
+  margin-right: 58px;
 }
 
 .nav___link {
@@ -413,11 +413,16 @@ border: 1px solid #E6E8EC;
 
 }
 
-
+.broadcast__box:hover {
+  color: #6D31EE;
+  fill: #6D31EE;
+}
 
 .broadcast__link {
   display: flex;
   align-items: center;
+  width: 120px;
+  height: 22px;
   font-family: "Muller";
   font-size: 16px;
   font-weight: 400;
@@ -460,7 +465,6 @@ border: 1px solid #E6E8EC;
     .broadcast__svg:hover {
     color: #6D31EE;
     fill: #6D31EE;
-    background-color: #6D31EE;
     }
 
     .broadcast__svg:active {
@@ -573,6 +577,23 @@ color: var(--color-text-light);
   font-weight: 500;
   line-height: 16px;
   color: var(--color-text-btn);
+}
+
+.guest__btn:focus {
+  background-color: #4F28A5;
+  border: #4F28A5;
+  color: var(--color-text-white);
+}
+
+.guest__btn:hover {
+background-color: #AA9DFA;
+color: var(--color-text-white);
+}
+
+.guest__btn:active {
+background-color: #6D31EE;
+border: #6D31EE;
+color: var(--color-text-white);
 }
 
 
@@ -735,8 +756,27 @@ width: 445px;
   color: var(--color-text-accent);
 }
 
+.radio__btn:focus {
+  background-color: #BB973E;
+  color: #121723;
+}
+
+.radio__btn:hover {
+  background-color:#F0D288;
+  border: #F0D288;
+  color: #121723;
+}
+
+.radio__btn:active {
+  background-color:#BB973E;
+  color: #121723;
+  fill:  #121723;
+}
+
 .radio__svg-btn {
 padding-right: 5px;
+fill: #121723;
+fill: #F0D288;
 }
 
 
