--- a/css/style.css
+++ b/css/style.css
@@ -725,7 +725,7 @@ width: 445px;
 
 .radio__btn {
   display: flex;
-  padding: 25px 20px 25px 8px;
+  padding: 25px 8px 25px 8px;
   width: 300px;
   height: 70px;
   border-radius: 100px;
@@ -754,31 +754,36 @@ width: 445px;
 }
 
 .radio__svg-btn {
-padding-right: 5px;
+margin-right: 8px;
+fill: #121723;
 }
 
-.radio__svg-btn:focus {
-
+.radio__svg-btn path:first-child {
+  fill: #F0D288;
 }
 
-.radio__svg-btn:hover {
-
-}
-
-.radio__svg-btn:active {
-
+.radio__btn:focus .radio__svg-btn path:first-child {
+  fill: #121723;
 }
 
 .radio__btn:focus .radio__svg-btn {
+  fill: #BB973E;
+  }
 
+.radio__btn:hover .radio__svg-btn path:first-child {
+  fill: #121723;
 }
 
 .radio__btn:hover .radio__svg-btn {
+  fill: #F0D288;
+}
 
+.radio__btn:active .radio__svg-btn path:first-child {
+  fill: #F0D288;
 }
 
 .radio__btn:active .radio__svg-btn {
-
+  fill: #121723;
 }
 
 
