--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,11 @@ margin-right: 208px;
 }
 
 .nav___link {
+  font-family: "Muller", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--color-text);
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
