--- a/css/media.css
+++ b/css/media.css
@@ -210,13 +210,9 @@
 
 }
 
-@media(max-width: 768px) {
+@media(max-width: 840px) {
 
   /* header */
-
-  .header__container {
-
-   }
 
    .header__logo {
     margin-left: 15%;
@@ -225,12 +221,7 @@
    .header-nav {
     padding-right: 15%;
     padding-left: 15%;
-    max-width: 768px;
     width: 100%;
-   }
-
-   .header__list {
-
    }
 
    .nav__item:not(:last-child) {
@@ -241,6 +232,7 @@
     padding-right: 15%;
    }
 
+
   /* hero */
 
   .hero__container {
@@ -250,15 +242,11 @@
     width: 100%;
     }
 
-  .hero__left {
-    /* margin-left: 115px; */
-    }
-
-
   .hero__right {
     display: none;
     background-image: none;
   }
+
 
   /* podcast */
 
@@ -279,65 +267,198 @@
       top: 124px;
       }
 
+
   /* broadcast */
 
   .broadcast__container {
-
+    position: relative;
     flex-direction: column-reverse;
-    padding: 12.2% 0;
+    padding: 12.2% 0 0;
     margin: 0;
-    /* max-width: 540px; */
     width: 100%;
   }
 
   .broadcast__left {
-    display: block;
     margin: 0;
+    flex-direction: row;
+    justify-content: center;
+    padding: 30px 0;
     border-top: 1px solid #E6E8EC;
+  }
+
+  .broadcast__pic {
+    margin: 0;
+    margin-right: 20px;
+  }
+
+  .broadcast__wrapper {
+   max-width: 255px;
+   width: 100%;
   }
 
   .broadcast__right {
     margin: 0 auto;
+    padding-top: 123px;
   }
 
   .broadcast__list {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     width: 540px;
   }
 
   .broadcast__title {
-    flex-grow: 0;
-    position: relative;
-    bottom: 935px;
-    left: 115px;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 1195px;
+    width: 540px;
     }
 
 
   /* guest */
 
+  .guest__container {
+    padding: 12.2% 0;
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
+  .guest__item {
+  flex-direction: column;
+  }
+
+  .guest__img {
+    margin: 0;
+    margin-bottom: 30px;
+  }
+
+
   /* playlist */
+
+  .playlist__container {
+    padding: 12.2% 0;
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
 
   /* radio */
 
+  .radio__container {
+    flex-direction: column;
+    padding: 12.2% 0;
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
+  .radio__left {
+    position: relative;
+    margin-bottom: 50px;
+  }
+
+  .radio__svg-new {
+    position: absolute;
+    bottom: 380px;
+    }
+
+  .radio__img {
+    max-width: 540px;
+  }
+
+  .radio__right {
+    max-width: 540px;
+    width: 100%;
+  }
+
+
   /* about */
+
+  .radio__container {
+    padding: 12.2% 0;
+  }
+
+  .about__content {
+    margin: 0;
+    margin-bottom: 30px;
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
+  .about__box {
+    flex-direction: column;
+  }
+
+  .about__svg {
+   background-image: url("/img/spiral_row.svg");
+   background-size: cover;
+   max-width: 653px;
+   width: 100%;
+   height: 112px;
+  }
+
+  .about__list {
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
+  .about__item {
+    margin-bottom: 30px;
+    width: 255px;
+    height: 361px;
+  }
+
+  .form-wrapper {
+    margin: 0 auto;
+    max-width: 540px;
+  }
+
 
   /* footer */
 
   .footer__container {
+    flex-direction: column;
     padding: 12.2% 0;
-    max-width: 768px;
+    max-width: 540px;
     max-width: 100%;
   }
 
-  .footer__svg {
-    width: 100%;
+  .footer__left {
+    margin-bottom: 80px;
   }
 
-  .form-input {
-    width: 100%;
+  .footer__link {
+    display: flex;
+    justify-content: center;
+  }
+
+  .social {
+    justify-content: center;
+  }
+
+  .social-link-youtube {
+    width: 36px;
+    height: 36px;
+  }
+
+  .social-link-ok {
+    width: 36px;
+    height: 36px;
+  }
+
+  .social-link-vk {
+    width: 36px;
+    height: 36px;
+  }
+
+  .footer__right {
+    margin: 0 auto;
   }
 
 }
+
+@media(max-width: 560px) {
+
+}
+
 
 @media(max-width: 296px) {
 
