--- a/css/media.css
+++ b/css/media.css
@@ -469,6 +469,7 @@
 
  .header__logo {
   padding-right: 0;
+  padding-bottom: 22px;
   width: 87px;
   max-width: 100%;
   margin-left: 15%;
@@ -480,8 +481,15 @@
  }
 
  .header-nav {
-  display: none;
-  max-width: 256px;
+  /* display: none; */
+  width: 320px;
+  width: 100%;
+ }
+
+ .nav___link {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
  }
 
  .header__list {
@@ -610,6 +618,11 @@
   left: 0;
 }
 
+.podcast__box {
+  padding: 25px 16px;
+  min-height: 113px;
+}
+
 /* broadcast */
 
 .broadcast__container {
@@ -693,44 +706,270 @@
   margin-bottom: 7px;
   font-size: 14px;
   font-weight: 400;
-  line-height: 21 px;
+  line-height: 21px;
 }
 
 /* guest */
 
+.guest__container {
+  padding: 0;
+  padding:  54px 32px;
+  margin: 0;
+  margin: 0 auto;
+  width: 256px;
+  width: 100%;
+}
+
+.guest__heading {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+}
+
+.guest__text {
+  margin-bottom: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
 /* playlist */
+
+.playlist__container {
+  padding: 0;
+  padding:  54px 32px;
+  margin: 0;
+  margin: 0 auto;
+  width: 256px;
+  width: 100%;
+}
+
+.playlist__list {
+  width: 256px;
+  width: 100%;
+}
+
+.playlist__item {
+  flex-direction: column;
+  width: 113px;
+}
+
+.playlist__box {
+  padding: 8px;
+  width: 113px;
+}
+
+.playlist__subtitle {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 12px;
+}
+
+.playlist__descr {
+  font-size: 9px;
+  font-weight: 400;
+  line-height: 9px;
+}
+
+.playlist__svg {
+  position: absolute;
+  left: 88px;
+}
 
 /* radio */
 
+.radio__container {
+  padding: 0;
+  padding:  54px 32px;
+  margin: 0;
+  margin: 0 auto;
+  width: 256px;
+  width: 100%;
+}
+
+.radio__left {
+  margin-right: 0;
+  margin-bottom: 36px;
+}
+
 .radio__img {
-  max-width: 256px;
+  width: 256px;
+  width: 100%;
+}
+
+.radio__svg-new {
+  left: 0px;
+  top: 0px;
+  width: 66px;
+  height: 66px;
+}
+
+.radio__title {
+  margin-bottom: 12px;
+}
+
+.radio__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.radio__price {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.radio__btn {
+  padding: 17px 8px;
+  width: 256px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
 }
 
 /* about */
 
+.about__container {
+  padding: 0;
+  padding:  54px 32px;
+  margin: 0;
+  margin: 0 auto;
+  width: 256px;
+  width: 100%;
+}
+
+.about__heading {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+}
+
+.about__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.about__svg {
+  display: none;
+}
+
+.about__list {
+  margin-bottom: 30px;
+}
+
 .about__item {
-  max-width: 256px;
+  margin: 0;
+  width: 113px;
+  height: 214px;
+}
+
+.about__img {
+  margin-bottom: 12px;
+  height: 113px;
+}
+
+.about__subtitle {
+  margin: 0;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.about__descr {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 .form-box {
+  margin-bottom: 30px;
   flex-direction: column;
-  max-width: 256px;
+  width: 256px;
+  width: 100%;
 }
 
 .form-input {
-  max-width: 256px;
+  margin: 0;
+  width: 256px;
+  width: 100%;
+  height: 50px;
+}
+
+.form-btn {
+  padding: 17px 44px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  width: 172px;
+  height: 50px;
+}
+
+.form-text {
+  font-size: 9px;
+  font-weight: 500;
+  line-height: 9px;
+}
+
+.form-checkbox-custom {
+  width: 13px;
+  height: 13px;
+}
+
+.form-text::after {
+  width: 13px;
+  height: 13px;
 }
 
 /* footer */
+
+.footer__container {
+padding: 0;
+padding-bottom: 15px;
+}
+
+.footer__left {
+  padding: 0;
+  padding:  54px 32px;
+  margin: 0;
+  margin: 0 auto;
+  width: 256px;
+  width: 100%;
+}
+
+.footer__right {
+  padding: 0;
+  padding: 30px 32px;
+  justify-content: center;
+  width: 320px;
+  width: 100%;
+  background-color: #121723;
+}
 
 .footer__list {
   max-width: 256px;
   height: 160px;
 }
 
+.footer__box {
+  padding-top: 20px;
+  background-image: url("/img/footer_wave_mobile.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  max-width: 100%;
 }
 
+.footer__svg {
+display: none;
+}
 
-@media(max-width: 296px) {
+.footer__text {
+padding-top: 10px;
+color: #A1A6B4;
+}
 
 }
